--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.0",
     "react-spinners": "^0.13.8",
