--- a/package.json
+++ b/package.json
@@ -10,22 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mui/material": "^5.12.3",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/material": "^5.14.2",
     "@mui/styled-engine-sc": "^5.12.0",
     "axios": "^1.4.0",
     "js-cookie": "^3.0.5",
-    "react": "^18.2.0",
+  
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-card-flip": "^1.2.0",
     "react-cookie": "^4.1.1",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^18.2.0",
+  
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.0",
     "react-spinners": "^0.13.8",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.11"
   },
+  "description": "https://github.com/mui/material-ui/blob/v5.14.2/docs/data/material/components/app-bar/ButtonAppBar.js",
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
