--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "axios": "^1.4.0",
     "js-cookie": "^3.0.5",
-  
+    "number-to-words": "^1.2.4",
     "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0",
     "react-card-flip": "^1.2.0",
     "react-cookie": "^4.1.1",
     "react-device-detect": "^2.2.3",
-  
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
